--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
         Tip 2: you can also add an image using data-image tag
     -->
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text">
+                <a href="" class="simple-text">
                     TITLE BOOII
                 </a>
             </div>
@@ -65,12 +65,6 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./maps.html">
-                            <i class="material-icons">location_on</i>
-                            <p>Maps</p>
-                        </a>
-                    </li>
-                    <li>
                         <a href="./notifications.html">
                             <i class="material-icons text-gray">notifications</i>
                             <p>Notifications</p>
@@ -93,33 +87,18 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">dashboard</i>
-                                    <p class="hidden-lg hidden-md">Dashboard</p>
-                                </a>
-                            </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="material-icons">notifications</i>
-                                    <span class="notification">5</span>
+                                    <span class="notification">2</span>
                                     <p class="hidden-lg hidden-md">Notifications</p>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="#">Mike John responded to your email</a>
+                                        <a href="#">Stock was sold!</a>
                                     </li>
                                     <li>
-                                        <a href="#">You have 5 new tasks</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You're now friend with Andrew</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another Notification</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another One</a>
+                                        <a href="#">Stock was sold!</a>
                                     </li>
                                 </ul>
                             </li>
@@ -149,7 +128,7 @@
                         <div class="col-md-12">
                             <div class="card stock">
                                 <div class="card-header card-chart fix" data-background-color="green">
-                                    <div class="ct-chart" id="dailySalesChart"></div>
+                                    <div class="ct-chart test" id="dailySalesChart"></div>
                                 </div>
                                 <div class="card-content">
                                     <h4 class="title">Daily Sales</h4>
@@ -157,7 +136,7 @@
                                         <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
                                 </div>
                                 <div class="card-footer">
-                                    <div class="stats">
+                                    <div class="stats" id="time">
                                         <i class="material-icons">access_time</i> updated 4 minutes ago
                                     </div>
                                 </div>
@@ -167,7 +146,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-12">
                                 <div class="card">
-                                    <div class="card-header" data-background-color="orange">
+                                    <div class="card-header" data-background-color="blue">
                                         <h4 class="title">Current Stocks</h4>
                                     </div>
                                     <div class="card-content table-responsive">
@@ -205,7 +184,7 @@
                             </div>
                         <div class="col-lg-4 col-md-12">
                             <div class="card card-nav-tabs">
-                                <div class="card-header" data-background-color="purple">
+                                <div class="card-header" data-background-color="red">
                                     <div class="nav-tabs-navigation">
                                         <div class="nav-tabs-wrapper">
                                             <span class="nav-tabs-title">Achievements:</span>
@@ -251,6 +230,16 @@
                                                         </td>
                                                         <td>Minimum Wage - Earn > $7.25</td>
                                                     </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes" checked disabled>
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>Diversity - 5 different stocks</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -261,22 +250,35 @@
                                                         <td>
                                                             <div class="checkbox">
                                                                 <label>
-                                                                    <input type="checkbox" name="optionsCheckboxes" checked>
+                                                                    <input type="checkbox" name="optionsCheckboxes" disabled>
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept through metro Detroit
+                                                        <td>IT'S FALLING! - Lose money!</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes" disabled>
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            Hidden - Hidden
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td>
                                                             <div class="checkbox">
                                                                 <label>
-                                                                    <input type="checkbox" name="optionsCheckboxes">
+                                                                    <input type="checkbox" name="optionsCheckboxes" disabled>
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Sign contract for "What are conference organizers afraid of?"</td>
+                                                        <td>
+                                                            Hidden - Hidden
+                                                        </td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -289,7 +291,7 @@
                             <div class="card">
                                 <div class="card-header" data-background-color="orange">
                                     <h4 class="title">Rankings</h4>
-                                    <p class="category">Rankings as of 11/5/2017</p>
+                                    <p class="category">Rankings as of <span id="time2">11/5/2017</span></p>
                                 </div>
                                 <div class="card-content table-responsive">
                                     <table class="table table-hover">
@@ -333,32 +335,6 @@
                 </div>
             </div>
             <footer class="footer">
-                <!--<div class="container-fluid">
-                    <nav class="pull-left">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>-->
             </footer>
         </div>
     </div>
@@ -381,13 +357,6 @@
 <script src="./js/material-dashboard.js?v=1.2.0"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
 <script src="./js/demo.js"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
-
-        // Javascript method's body can be found in assets/js/demos.js
-        demo.initDashboardPageCharts();
-
-    });
-</script>
+<script src="./js/index.js"></script>
 
 </html>
