--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,6 +46,12 @@
                             <p>User Profile</p>
                         </a>
                     </li>
+                    <li>
+                        <a href="./buy.html">
+                            <i class="material-icons">shopping_cart</i>
+                            <p>Buy / Sell</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -113,7 +119,7 @@
                                 </div>
                                 <div class="card-footer">
                                     <div class="stats" id="time">
-                                        <i class="material-icons">access_time</i> updated 4 minutes ago
+                                        <i class="material-icons">access_time</i>
                                     </div>
                                 </div>
                             </div>
@@ -124,6 +130,7 @@
                                 <div class="card">
                                     <div class="card-header" data-background-color="blue">
                                         <h4 class="title">Current Stocks</h4>
+                                        <p class="category">Stocks as of <span id="time2">11/5/2017</span></p>
                                     </div>
                                     <div class="card-content table-responsive">
                                         <table class="table table-hover">
