--- a/client/public/user.html
+++ b/client/public/user.html
@@ -47,6 +47,12 @@
                             <p>User Profile</p>
                         </a>
                     </li>
+                    <li>
+                        <a href="./buy.html">
+                            <i class="material-icons">shopping_cart</i>
+                            <p>Buy / Sell</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
