Created model and did some javascript in the buy tab

--- a/client/public/buy.html
+++ b/client/public/buy.html
@@ -33,7 +33,7 @@
     <!-- Material Dashboard javascript methods -->
     <script src="./js/material-dashboard.js?v=1.2.0"></script>
     <script src="./js/demo.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/buy.js"></script>
     <script src="jquery.js"></script>
     <script src="jquery.searchable.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -138,40 +138,40 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td>Introducing</td>
-                                                    <td>jQuery</td>
-                                                    <td>Searchable</td>
+                                                    <td class="ticker">Introducing</td>
+                                                    <td class="price">jQuery</td>
+                                                    <td class="max">Searchable</td>
                                                     <td>
-                                                        <input type="text" id="amount">                                                    
+                                                        <input type="text" id="amount" class="amount">                                                    
                                                     </td>
                                                     <td>
-                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
                                                             Buy
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Lorem</td>
-                                                    <td>Ipsum</td>
-                                                    <td>Dolor</td>
+                                                    <td class="ticker">Lorem</td>
+                                                    <td class="price">Ipsum</td>
+                                                    <td class="max">Dolor</td>
                                                     <td>
-                                                        <input type="text" id="amount">                                                    
+                                                        <input type="text" id="amount" class="amount">                                                    
                                                     </td>
                                                     <td>
-                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
                                                             Buy
                                                         </button>
                                                     </td>                                               
                                                 </tr>
                                                 <tr>
-                                                    <td>Some</td>
-                                                    <td>More</td>
-                                                    <td>Data</td>
+                                                    <td class="ticker">Some</td>
+                                                    <td class="price">More</td>
+                                                    <td class="max">Data</td>
                                                     <td>
-                                                        <input type="text" id="amount">                                                    
+                                                        <input type="text" id="amount" class="amount">                                                    
                                                     </td>
                                                     <td>
-                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
                                                             Buy
                                                         </button>
                                                     </td>                                           
