--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,25 @@
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <!--   Core JS Files   -->
+    <script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="./js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./js/material.min.js" type="text/javascript"></script>
+    <!--  Charts Plugin -->
+    <script src="./js/chartist.min.js"></script>
+    <!--  Dynamic Elements plugin -->
+    <script src="./js/arrive.min.js"></script>
+    <!--  PerfectScrollbar Library -->
+    <script src="./js/perfect-scrollbar.jquery.min.js"></script>
+    <!--  Notifications Plugin    -->
+    <script src="./js/bootstrap-notify.js"></script>
+    <!--  Google Maps Plugin    -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    <!-- Material Dashboard javascript methods -->
+    <script src="./js/material-dashboard.js?v=1.2.0"></script>
+    <!-- Material Dashboard DEMO methods, don't include it in your project! -->
+    <script src="./js/demo.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 
 <body>
@@ -65,7 +84,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"> Dashboard </a>
+                        <a class="navbar-brand" href="#" data-toggle="modal" data-target="#myModal"> Dashboard </a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
@@ -318,28 +337,30 @@
                 </div>
             </div>
             <footer class="footer">
+                <!--<button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>-->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="myModal">Modal title</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            ...
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
             </footer>
         </div>
     </div>
 </body>
-<!--   Core JS Files   -->
-<script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="./js/bootstrap.min.js" type="text/javascript"></script>
-<script src="./js/material.min.js" type="text/javascript"></script>
-<!--  Charts Plugin -->
-<script src="./js/chartist.min.js"></script>
-<!--  Dynamic Elements plugin -->
-<script src="./js/arrive.min.js"></script>
-<!--  PerfectScrollbar Library -->
-<script src="./js/perfect-scrollbar.jquery.min.js"></script>
-<!--  Notifications Plugin    -->
-<script src="./js/bootstrap-notify.js"></script>
-<!--  Google Maps Plugin    -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-<!-- Material Dashboard javascript methods -->
-<script src="./js/material-dashboard.js?v=1.2.0"></script>
-<!-- Material Dashboard DEMO methods, don't include it in your project! -->
-<script src="./js/demo.js"></script>
-<script src="./js/index.js"></script>
+
 
 </html>
