--- a/client/public/index.html
+++ b/client/public/index.html
@@ -84,25 +84,10 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#" data-toggle="modal" data-target="#myModal"> Dashboard </a>
+                        <a class="navbar-brand" href="#" data-toggle="modal" data-target="#myModal" id="userTitle"> Dashboard </a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">notifications</i>
-                                    <span class="notification">2</span>
-                                    <p class="hidden-lg hidden-md">Notifications</p>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Stock was sold!</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Stock was sold!</a>
-                                    </li>
-                                </ul>
-                            </li>
                             <li>
                                 <a href="./login.html" class="dropdown-toggle loggout" data-toggle="dropdown">
                                     <i class="material-icons">person</i>
@@ -110,16 +95,6 @@
                                 </a>
                             </li>
                         </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group  is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
                     </div>
                 </div>
             </nav>
@@ -149,7 +124,7 @@
                                 <div class="card">
                                     <div class="card-header" data-background-color="blue">
                                         <h4 class="title">Current Stocks</h4>
-                                        <p class="category">Stocks as of <span id="time2">11/5/2017</span></p>
+                                        <p class="category">Stocks as of <span id="time2"></span></p>
                                     </div>
                                     <div class="card-content table-responsive">
                                         <table class="table table-hover">
@@ -158,27 +133,7 @@
                                                 <th>Current Price</th>
                                                 <th>Shares</th>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>Dakota Rice</td>
-                                                    <td>$36,738</td>
-                                                    <td>2</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Minerva Hooper</td>
-                                                    <td>$23,789</td>
-                                                    <td>3</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Sage Rodriguez</td>
-                                                    <td>$56,142</td>
-                                                    <td>1</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Philip Chaney</td>
-                                                    <td>$38,735</td>
-                                                    <td>4</td>
-                                                </tr>
+                                            <tbody id="stock-body">
                                             </tbody>
                                         </table>
                                     </div>
@@ -240,7 +195,7 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Diversity - 5 different stocks</td>
+                                                        <td>IT'S FALLING! - Lose money!</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -256,7 +211,7 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>IT'S FALLING! - Lose money!</td>
+                                                        <td>Diversity - Hold 5 different stocks</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -348,7 +303,9 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            asdjfal;skdfjal;skdjfal;sdkfjasl;dkfja
+                            asd;klfjasl;dkfjasdfljk
+                            asdfklajsdfasdf
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
