I apparently changed something

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -255,33 +255,33 @@
                                         <thead class="text-warning">
                                             <th>ID</th>
                                             <th>Name</th>
-                                            <th>Salary</th>
-                                            <th>Country</th>
+                                            <th>Net Gain</th>
+                                            <th>Achievements</th>
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>1</td>
-                                                <td>Dakota Rice</td>
-                                                <td>$36,738</td>
-                                                <td>Niger</td>
+                                                <td>3</td>
+                                                <td>Dkzver</td>
+                                                <td>$5,230</td>
+                                                <td>4</td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
-                                                <td>Minerva Hooper</td>
-                                                <td>$23,789</td>
-                                                <td>Curaçao</td>
+                                                <td>RyanSeipp</td>
+                                                <td>$1,431</td>
+                                                <td>2</td>
                                             </tr>
                                             <tr>
                                                 <td>3</td>
-                                                <td>Sage Rodriguez</td>
-                                                <td>$56,142</td>
-                                                <td>Netherlands</td>
+                                                <td>MattK</td>
+                                                <td>$0</td>
+                                                <td>2</td>
                                             </tr>
                                             <tr>
-                                                <td>4</td>
-                                                <td>Philip Chaney</td>
-                                                <td>$38,735</td>
-                                                <td>Korea, South</td>
+                                                <td>1</td>
+                                                <td>CWeiser</td>
+                                                <td>-$400</td>
+                                                <td>3</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -296,21 +296,17 @@
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="myModal">Modal title</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            asdjfal;skdfjal;skdjfal;sdkfjasl;dkfja
-                            asd;klfjasl;dkfjasdfljk
-                            asdfklajsdfasdf
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                        </div>
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="myModal">Welcome </h5>
+                            </div>
+                            <div class="modal-body">
+                                asdjfal;skdfjal;skdjfal;sdkfjasl;dkfja
+                                asd;klfjasl;dkfjasdfljk
+                                asdfklajsdfasdf
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Let's Get Started!</button>
+                            </div>
                         </div>
                     </div>
                     </div>
