--- a/client/public/buy.html
+++ b/client/public/buy.html
@@ -140,11 +140,7 @@
                                                     <td class="price">jQuery</td>
                                                     <td class="max">Searchable</td>
                                                     <td>
-<<<<<<< HEAD
-                                                        <input type="text" id="amount">
-=======
                                                         <input type="text" id="amount" class="amount">                                                    
->>>>>>> 87dafd668e8f9a0713d0e89ff3d83c74d341e7c9
                                                     </td>
                                                     <td>
                                                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
@@ -157,11 +153,7 @@
                                                     <td class="price">Ipsum</td>
                                                     <td class="max">Dolor</td>
                                                     <td>
-<<<<<<< HEAD
-                                                        <input type="text" id="amount">
-=======
                                                         <input type="text" id="amount" class="amount">                                                    
->>>>>>> 87dafd668e8f9a0713d0e89ff3d83c74d341e7c9
                                                     </td>
                                                     <td>
                                                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
@@ -174,11 +166,7 @@
                                                     <td class="price">More</td>
                                                     <td class="max">Data</td>
                                                     <td>
-<<<<<<< HEAD
-                                                        <input type="text" id="amount">
-=======
                                                         <input type="text" id="amount" class="amount">                                                    
->>>>>>> 87dafd668e8f9a0713d0e89ff3d83c74d341e7c9
                                                     </td>
                                                     <td>
                                                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
@@ -222,46 +210,7 @@
                                                     <th>Button</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>Introducing</td>
-                                                    <td>jQuery</td>
-                                                    <td>Searchable</td>
-                                                    <td>
-                                                        <input type="text" id="amount">
-                                                    </td>
-                                                    <td>
-                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                                                            Sell
-                                                        </button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Lorem</td>
-                                                    <td>Ipsum</td>
-                                                    <td>Dolor</td>
-                                                    <td>
-                                                        <input type="text" id="amount">
-                                                    </td>
-                                                    <td>
-                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                                                            Sell
-                                                        </button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Some</td>
-                                                    <td>More</td>
-                                                    <td>Data</td>
-                                                    <td>
-                                                        <input type="text" id="amount">
-                                                    </td>
-                                                    <td>
-                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                                                            Sell
-                                                        </button>
-                                                    </td>
-                                                </tr>
+                                            <tbody id="sell-body">
                                             </tbody>
                                         </table>
                                         <hr>
