--- a/client/public/user.html
+++ b/client/public/user.html
@@ -22,7 +22,7 @@
 
 <body>
   <div class="wrapper">
-    <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-color="purple" data-image="./img/sidebar-1.jpg">
       <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
@@ -148,7 +148,7 @@
                   <th>Net Worth</th>
                   <th>Net Gain/Loss</th>
                 </thead>
-                <tbody>
+                <tbody id="profile-body">
                   <tr>
                     <td>GOOGL</td>
                     <td>$1,050</td>
