--- a/client/public/index.html
+++ b/client/public/index.html
@@ -109,7 +109,7 @@
                                 <div class="card-content">
                                     <h4 class="title">Daily Sales</h4>
                                     <p class="category">
-                                        <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
+                                        <span class="text-success"><i class="fa fa-long-arrow-down"></i> -5% </span> decrease in today sales.</p>
                                 </div>
                                 <div class="card-footer">
                                     <div class="stats" id="time">
@@ -124,7 +124,7 @@
                                 <div class="card">
                                     <div class="card-header" data-background-color="blue">
                                         <h4 class="title">Current Stocks</h4>
-                                        <p class="category">Stocks as of <span id="time2"></span></p>
+                                        <p class="category">Stocks as of <span id="tim1">11/5/2017</span></p>
                                     </div>
                                     <div class="card-content table-responsive">
                                         <table class="table table-hover">
@@ -248,7 +248,7 @@
                             <div class="card">
                                 <div class="card-header" data-background-color="orange">
                                     <h4 class="title">Rankings</h4>
-                                    <p class="category">Rankings as of <span id="time2">11/5/2017</span></p>
+                                    <p class="category">Rankings as of <span id="tim">11/5/2017</span></p>
                                 </div>
                                 <div class="card-content table-responsive">
                                     <table class="table table-hover">
