--- a/client/public/user.html
+++ b/client/public/user.html
@@ -149,42 +149,6 @@
                   <th>Net Gain/Loss</th>
                 </thead>
                 <tbody id="profile-body">
-                  <tr>
-                    <td>GOOGL</td>
-                    <td>$1,050</td>
-                    <td>$925</td>
-                    <td>11.8%</td>
-                    <td>35</td>
-                    <td>$36,738</td>
-                    <td>$4,351</td>
-                  </tr>
-                  <tr>
-                    <td>AMZN</td>
-                    <td>$1,050</td>
-                    <td>$925</td>
-                    <td>11.8%</td>
-                    <td>35</td>
-                    <td>$36,738</td>
-                    <td>$4,351</td>
-                  </tr>
-                  <tr>
-                    <td>AAPL</td>
-                    <td>$1,050</td>
-                    <td>$925</td>
-                    <td>11.8%</td>
-                    <td>35</td>
-                    <td>$36,738</td>
-                    <td>$4,351</td>
-                  </tr>
-                  <tr>
-                    <td>FB</td>
-                    <td>$1,050</td>
-                    <td>$925</td>
-                    <td>11.8%</td>
-                    <td>35</td>
-                    <td>$36,738</td>
-                    <td>$4,351</td>
-                  </tr>
                 </tbody>
               </table>
             </div>
@@ -214,6 +178,6 @@
 <!-- Material Dashboard javascript methods -->
 <script src="./js/material-dashboard.js?v=1.2.0"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-<script src="./js/demo.js"></script>
+<script src="./js/profile.js"></script>
 
 </html>
