--- a/client/public/user.html
+++ b/client/public/user.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="card-content">
                   <p class="category">Starting Balance</p>
-                  <h3 class="title">$10,000</h3>
+                  <h3 class="title" id="start">$10,000</h3>
                 </div>
                 <div class="card-footer">
                   <div class="stats">
@@ -105,8 +105,8 @@
                   <i class="material-icons">store</i>
                 </div>
                 <div class="card-content">
-                  <p class="category">Net Profit</p>
-                  <h3 class="title">$34,245</h3>
+                  <p class="category">Invested</p>
+                  <h3 class="title" id="invested">$34,245</h3>
                 </div>
                 <div class="card-footer">
                   <div class="stats">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="card-content">
                   <p class="category">Total Stocks Owned</p>
-                  <h3 class="title">140</h3>
+                  <h3 class="title" id="total">140</h3>
                 </div>
                 <div class="card-footer">
                   <div class="stats">
