Buy and Sell finally works

--- a/client/public/buy.html
+++ b/client/public/buy.html
@@ -125,9 +125,9 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="ticker">Introducing</td>
-                                    <td class="price">jQuery</td>
-                                    <td class="max">Searchable</td>
+                                    <td class="ticker">APPL</td>
+                                    <td class="price">172.50</td>
+                                    <td class="max">15</td>
                                     <td>
                                         <input type="text" id="amount" class="amount">                                                    
                                     </td>
@@ -138,9 +138,9 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="ticker">Lorem</td>
-                                    <td class="price">Ipsum</td>
-                                    <td class="max">Dolor</td>
+                                    <td class="ticker">AMD</td>
+                                    <td class="price">11.12</td>
+                                    <td class="max">215</td>
                                     <td>
                                         <input type="text" id="amount" class="amount">                                                    
                                     </td>
@@ -151,9 +151,9 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="ticker">Some</td>
-                                    <td class="price">More</td>
-                                    <td class="max">Data</td>
+                                    <td class="ticker">NVDA</td>
+                                    <td class="price">208.69</td>
+                                    <td class="max">7</td>
                                     <td>
                                         <input type="text" id="amount" class="amount">                                                    
                                     </td>
@@ -194,7 +194,6 @@
                                                     <th>Stock Ticker</th>
                                                     <th>Price</th>
                                                     <th>Number of Shares</th>
-                                                    <th>Amount</th>
                                                     <th>Button</th>
                                                 </tr>
                                             </thead>
