--- a/client/public/index.html
+++ b/client/public/index.html
@@ -109,7 +109,7 @@
                                 <div class="card-content">
                                     <h4 class="title">Daily Sales</h4>
                                     <p class="category">
-                                        <span class="text-success"><i class="fa fa-long-arrow-down"></i> -5% </span> decrease in today sales.</p>
+                                        <span class="text-success"><i class="fa fa-long-arrow-up"></i> 1.7% </span> increase in today's stocks</p>
                                 </div>
                                 <div class="card-footer">
                                     <div class="stats" id="time">
