Add icons to cards

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -107,7 +107,7 @@
                                     <div class="ct-chart test" id="dailySalesChart"></div>
                                 </div>
                                 <div class="card-content">
-                                    <h4 class="title">Daily Sales</h4>
+                                    <h4 class="title"><i class="fa fa-usd"></i> Daily Sales</h4>
                                     <p class="category">
                                         <span class="text-success"><i class="fa fa-long-arrow-down"></i> -5% </span> decrease in today sales.</p>
                                 </div>
@@ -123,7 +123,7 @@
                         <div class="col-lg-4 col-md-12">
                                 <div class="card">
                                     <div class="card-header" data-background-color="blue">
-                                        <h4 class="title">Current Stocks</h4>
+                                        <h4 class="title"><i class="fa fa-area-chart"></i> Current Stocks</h4>
                                         <p class="category">Stocks as of <span id="tim1">11/5/2017</span></p>
                                     </div>
                                     <div class="card-content table-responsive">
@@ -144,7 +144,7 @@
                                 <div class="card-header" data-background-color="red">
                                     <div class="nav-tabs-navigation">
                                         <div class="nav-tabs-wrapper">
-                                            <span class="nav-tabs-title">Achievements:</span>
+                                            <span class="nav-tabs-title"><i class="fa fa-diamond"></i> Achievements:</span>
                                             <ul class="nav nav-tabs" data-tabs="tabs">
                                                 <li class="active">
                                                     <a href="#profile" data-toggle="tab">
@@ -247,7 +247,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="card">
                                 <div class="card-header" data-background-color="orange">
-                                    <h4 class="title">Rankings</h4>
+                                    <h4 class="title"><i class="fa fa-line-chart"></i> Rankings</h4>
                                     <p class="category">Rankings as of <span id="tim">11/5/2017</span></p>
                                 </div>
                                 <div class="card-content table-responsive">
