--- a/client/public/user.html
+++ b/client/public/user.html
@@ -87,7 +87,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header" data-background-color="green">
-                  <i class="material-icons">store</i>
+                  <i class="fa fa-money"></i>
                 </div>
                 <div class="card-content">
                   <p class="category">Starting Balance</p>
@@ -102,7 +102,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header" data-background-color="green">
-                  <i class="material-icons">store</i>
+                  <i class="fa fa-bank"></i>
                 </div>
                 <div class="card-content">
                   <p class="category">Invested</p>
@@ -118,7 +118,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header" data-background-color="green">
-                  <i class="material-icons">store</i>
+                  <i class="fa fa-file"></i>
                 </div>
                 <div class="card-content">
                   <p class="category">Total Stocks Owned</p>
@@ -134,7 +134,7 @@
 
           <div class="card">
             <div class="card-header" data-background-color="blue">
-              <h4 class="title">Current Stocks</h4>
+              <h4 class="title"><i class="fa fa-area-chart"></i> Current Stocks</h4>
               <p class="category">Stocks as of <span id="time2">11/5/2017</span></p>
             </div>
             <div class="card-content table-responsive">
@@ -153,6 +153,17 @@
               </table>
             </div>
           </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="orange">
+              <i class="fa fa-coffee"></i>
+            </div>
+            <div class="card-content">
+              <h3 class="title">With the money you would have made, you could buy 11,415 coffees!</h3>
+            </div>
+
+          </div>
+
         </div>
       </div>
 
