Stuff doth beth changeth

--- a/client/public/buy.html
+++ b/client/public/buy.html
@@ -68,6 +68,12 @@
                             <p>User Profile</p>
                         </a>
           </li>
+          <li>
+                <a href="./achievements.html">
+                    <i class="material-icons">star</i>
+                    <p>Achievements</p>
+                </a>
+          </li>
           <li class="active">
             <a href="./buy.html">
                             <i class="material-icons">shopping_cart</i>
