--- a/client/public/index.html
+++ b/client/public/index.html
@@ -66,6 +66,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="./achievements.html">
+                            <i class="material-icons">star</i>
+                            <p>Achievements</p>
+                        </a>
+                    </li>
+                    <li>
                         <a href="./buy.html">
                             <i class="material-icons">shopping_cart</i>
                             <p>Buy / Sell</p>
@@ -175,7 +181,8 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Great Start - Buy 1 stock!</td>
+                                                        <td>Great Start</td>
+                                                        <td>Buy 1 stock!</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -185,7 +192,8 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>Minimum Wage - Earn > $7.25</td>
+                                                        <td>Minimum Wage</td>
+                                                        <td>Earn > $7.25</td>
                                                     </tr>
                                                     <tr>
                                                         <td>
@@ -195,7 +203,19 @@
                                                                 </label>
                                                             </div>
                                                         </td>
-                                                        <td>IT'S FALLING! - Lose money!</td>
+                                                        <td>IT'S FALLING!</td>
+                                                        <td>Lose money!</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <div class="checkbox">
+                                                                <label>
+                                                                    <input type="checkbox" name="optionsCheckboxes" checked disabled>
+                                                                </label>
+                                                            </div>
+                                                        </td>
+                                                        <td>FIRE SALE</td>
+                                                        <td>Buy over 200 shares of a single company</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
