--- a/client/public/user.html
+++ b/client/public/user.html
@@ -48,6 +48,12 @@
             </a>
           </li>
           <li>
+            <a href="./achievements.html">
+                <i class="material-icons">star</i>
+                <p>Achievements</p>
+            </a>
+          </li>
+          <li>
             <a href="./buy.html">
               <i class="material-icons">shopping_cart</i>
               <p>Buy / Sell</p>
