Update project name

--- a/client/public/buy.html
+++ b/client/public/buy.html
@@ -50,8 +50,8 @@
         Tip 2: you can also add an image using data-image tag
     -->
       <div class="logo">
-        <a href="" class="simple-text">
-                    TITLE BOOII
+        <a href="./index.html" class="simple-text">
+                    Trade Zone
                 </a>
       </div>
       <div class="sidebar-wrapper">
@@ -129,7 +129,7 @@
                                     <td class="price">172.50</td>
                                     <td class="max">15</td>
                                     <td>
-                                        <input type="text" id="amount" class="amount">                                                    
+                                        <input type="text" id="amount" class="amount">
                                     </td>
                                     <td>
                                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
@@ -142,7 +142,7 @@
                                     <td class="price">11.12</td>
                                     <td class="max">215</td>
                                     <td>
-                                        <input type="text" id="amount" class="amount">                                                    
+                                        <input type="text" id="amount" class="amount">
                                     </td>
                                     <td>
                                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
@@ -155,7 +155,7 @@
                                     <td class="price">208.69</td>
                                     <td class="max">7</td>
                                     <td>
-                                        <input type="text" id="amount" class="amount">                                                    
+                                        <input type="text" id="amount" class="amount">
                                     </td>
                                     <td>
                                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
