--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,7 +48,7 @@
     -->
             <div class="logo">
                 <a href="" class="simple-text">
-                    TITLE BOOII
+                    Trade Zone
                 </a>
             </div>
             <div class="sidebar-wrapper">
@@ -302,7 +302,7 @@
                             <div class="modal-body">
                             <font size="2">
                                 <p><b>Welcome to the Stock Market Game!</b></p>
-                            
+
 								<p><b>-</b> The purpose of this game is to help you learn about investing and the world of stocks. Our goal is to help get students get interested in investing by providing people who participate with an opportunity to explore investing in an environment with no risk, because it is entirely simulated. There are plenty of options you can use to practice and continue to learn, wih our simulated buying and selling. You'll even be able to view how your friends are doing on a leaderboard, and achievements will help you gauge your progress and give you milestones to aim for.</p>
 
 								<p><b>-</b> What is a stock? A stock is simply a unit of ownership in a company that you can purchase or sell on the stock market. Buying and selling stocks can only be done when the market is open, usally around 9:30 a.m. EST, and closing around 4:00 p.m. EST.</p>
