--- a/client/public/user.html
+++ b/client/public/user.html
@@ -29,8 +29,8 @@
         Tip 2: you can also add an image using data-image tag
     -->
       <div class="logo">
-        <a href="" class="simple-text">
-          Lol
+        <a href="./index.html" class="simple-text">
+          Trade Zone
         </a>
       </div>
       <div class="sidebar-wrapper">
