Update project name

--- a/client/public/buy.html
+++ b/client/public/buy.html
@@ -51,7 +51,7 @@
     -->
       <div class="logo">
         <a href="./index.html" class="simple-text">
-                    Trade Zone
+                    Trade Off
                 </a>
       </div>
       <div class="sidebar-wrapper">
@@ -112,53 +112,53 @@
               </div>
               <div class="card-content table-responsive">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <table class="table" id="table1">
-                            <thead>
-                                <tr>
-                                    <th>Stock Ticker</th>
-                                    <th>Price</th>
-                                    <th>Number of Shares</th>
-                                    <th>Amount</th>
-                                    <th>Button</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="ticker">APPL</td>
-                                    <td class="price">172.50</td>
-                                    <td class="max">15</td>
-                                    <td>
-                                        <input type="text" id="amount" class="amount">
-                                    </td>
-                                    <td>
-                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
+                  <div class="col-lg-12">
+                    <table class="table" id="table1">
+                      <thead>
+                        <tr>
+                          <th>Stock Ticker</th>
+                          <th>Price</th>
+                          <th>Number of Shares</th>
+                          <th>Amount</th>
+                          <th>Button</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td class="ticker">APPL</td>
+                          <td class="price">172.50</td>
+                          <td class="max">15</td>
+                          <td>
+                            <input type="text" id="amount" class="amount">
+                          </td>
+                          <td>
+                            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
                                             Buy
                                         </button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="ticker">AMD</td>
-                                    <td class="price">11.12</td>
-                                    <td class="max">215</td>
-                                    <td>
-                                        <input type="text" id="amount" class="amount">
-                                    </td>
-                                    <td>
-                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="ticker">AMD</td>
+                          <td class="price">11.12</td>
+                          <td class="max">215</td>
+                          <td>
+                            <input type="text" id="amount" class="amount">
+                          </td>
+                          <td>
+                            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
                                             Buy
                                         </button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="ticker">NVDA</td>
-                                    <td class="price">208.69</td>
-                                    <td class="max">7</td>
-                                    <td>
-                                        <input type="text" id="amount" class="amount">
-                                    </td>
-                                    <td>
-                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="ticker">NVDA</td>
+                          <td class="price">208.69</td>
+                          <td class="max">7</td>
+                          <td>
+                            <input type="text" id="amount" class="amount">
+                          </td>
+                          <td>
+                            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent buy-stock">
                                             Buy
                                         </button>
                           </td>
@@ -186,36 +186,36 @@
                   </div>
                 </div>
                 <div class="card-content table-responsive">
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <table class="table" id="table2">
-                                            <thead>
-                                                <tr>
-                                                    <th>Stock Ticker</th>
-                                                    <th>Price</th>
-                                                    <th>Number of Shares</th>
-                                                    <th>Button</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="sell-body">
-                                            </tbody>
-                                        </table>
-                                        <hr>
-                                    </div>
-                                </div>
-                            <script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
-                        </div>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <table class="table" id="table2">
+                        <thead>
+                          <tr>
+                            <th>Stock Ticker</th>
+                            <th>Price</th>
+                            <th>Number of Shares</th>
+                            <th>Button</th>
+                          </tr>
+                        </thead>
+                        <tbody id="sell-body">
+                        </tbody>
+                      </table>
+                      <hr>
                     </div>
                   </div>
                   <script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
                 </div>
               </div>
             </div>
+            <script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
           </div>
-          <footer class="footer">
-          </footer>
         </div>
       </div>
+      </div>
+      <footer class="footer">
+      </footer>
+    </div>
+  </div>
 </body>
 
 <script>
