--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,7 +48,7 @@
     -->
             <div class="logo">
                 <a href="" class="simple-text">
-                    Trade Zone
+                    Trade Off
                 </a>
             </div>
             <div class="sidebar-wrapper">
