--- a/client/public/user.html
+++ b/client/public/user.html
@@ -30,7 +30,7 @@
     -->
       <div class="logo">
         <a href="./index.html" class="simple-text">
-          Trade Zone
+          Trade Off
         </a>
       </div>
       <div class="sidebar-wrapper">
