--- a/client/public/user.html
+++ b/client/public/user.html
@@ -166,7 +166,7 @@
                 <i class="fa fa-coffee"></i>
               </div>
               <div class="card-content">
-                <h3 class="title">With the money you made, you could buy 11,415 coffees!</h3>
+                <h3 class="title">With the money you made, you could buy <span class='coffee'>11,415</span> coffees!</h3>
               </div>
             </div>
           </div>
