--- a/client/public/index.html
+++ b/client/public/index.html
@@ -113,7 +113,7 @@
                                     <div class="ct-chart test" id="dailySalesChart"></div>
                                 </div>
                                 <div class="card-content">
-                                    <h4 class="title"><i class="fa fa-usd"></i> Daily Sales</h4>
+                                    <h4 class="title"><i class="fa fa-usd"></i> Daily Earnings</h4>
                                     <p class="category">
                                         <span class="text-success"><i class="fa fa-long-arrow-up"></i> 1.7% </span> increase in today's stocks</p>
                                 </div>
